--- a/css/style.css
+++ b/css/style.css
@@ -6,8 +6,7 @@
 
 body {
     font-family: "Kelly Slab", sans-serif;
-    margin: 0;
-    padding: 0;
+    padding-top: 60px;
     background-color: #d7c2af;
 }
 
