--- a/css/style.css
+++ b/css/style.css
@@ -52,8 +52,7 @@ header {
     left: 0;
     top: 0;
     width: 100%;
-    /*height: 100%;*/
-    overflow: auto;
+    height: 100%;
     background-color: rgba(0, 0, 0, 0.4);
 }
 
