--- a/css/style.css
+++ b/css/style.css
@@ -966,7 +966,7 @@ footer{
     margin: 15% auto;
     padding: 20px;
     border: 1px solid #888;
-    width: 25%;
+    width: 250px;
     border-radius: 8px;
     text-align: center;
     color: #000; /* Text color */
