--- a/css/style.css
+++ b/css/style.css
@@ -423,8 +423,8 @@ li{
     transform-style: preserve-3d;
     transform: scale3d(0.9,0.9,1);
     transition: transform 0.5s cubic-bezier(.25,.75,.25,1.25);
-    position: relative;
     box-shadow: 0 30px 50px -30px rgba(0,0,0,0.35);
+    position: relative;
     border-radius: 5px;
 }
 
@@ -454,12 +454,7 @@ li{
     background-color: #fff;
     transform: rotateY(180deg);
 }
-.card_slider-cup {
-    background-color: #fff;
-    border-radius: 5px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    text-align: center;
-}
+
 
 .slider_slider-cup {
     display: flex;
@@ -493,6 +488,7 @@ li{
     display: flex;
     flex-direction: column;
 }
+
 
 .tiles_new-cup {
     display: flex;
@@ -557,7 +553,7 @@ li{
 .card_new-cup {
     background-color: #fff;
     border-radius: 5px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 30px 50px -30px rgba(0,0,0,0.35);
     text-align: center;
 }
 
@@ -579,6 +575,10 @@ li{
 
 .color-btn_new-cup:hover {
     transform: scale(1.1);
+}
+
+.box-image{
+    margin-top: 23px;
 }
 
 .cup-image_new-cup {
@@ -884,6 +884,10 @@ footer{
     .text-footer p{
         margin-bottom: 0;
     }
+
+    .button-item{
+        padding: 10px 10px;
+    }
 }
 
 .modal {
@@ -963,16 +967,18 @@ footer{
 }
 
 .dialog-content {
-    background-color: #b0bcc1; /* Same color as the card in the image */
-    margin: 15% auto;
+    background-color: #b0bcc1;
+    position: absolute;
+    top: 55%;
+    left: 50%;
+    transform: translate(-50%, -50%);
     padding: 20px;
     border: 1px solid #888;
     width: 300px;
-
     border-radius: 8px;
     text-align: center;
-    color: #000; /* Text color */
-    font-family: 'Arial', sans-serif; /* Replace with your preferred font */
+    color: #000;
+    font-family: 'Arial', sans-serif;
 }
 
 .dialog-body a{
@@ -1014,15 +1020,15 @@ footer{
 
 
 .myModal {
-    display: none; /* Скрываем модальное окно по умолчанию */
+    display: none;
     position: fixed;
     z-index: 3;
-    padding-top: 0; /* Убираем отступ сверху */
+    padding-top: 0;
     left: 0;
     top: 0;
     width: 100%;
     height: 100%;
-    overflow: hidden; /* Отключаем прокрутку */
+    overflow: hidden;
     background-color: rgba(0, 0, 0, 0.9);
 }
 
