--- a/css/style.css
+++ b/css/style.css
@@ -59,7 +59,6 @@ header {
 .main-content{
     width: 100%;
     display: flex;
-    /*justify-content: space-between;*/
     margin-top: 40px;
 }
 
@@ -102,16 +101,9 @@ img{
 }
 
 
-
-/*доделать*/
-/*.sidebar-text{*/
-/*    margin: 20px 0;*/
-/*}*/
-
 .second-part{
     margin-top: 50px;
 }
-
 
 swiper-container {
     width: 100%;
@@ -139,7 +131,6 @@ swiper-slide img {
     right: 16px;
     bottom: 16px;
     z-index: 1;
-    /*width: 48px;*/
     height: 48px;
     display: flex;
     align-items: center;
@@ -328,10 +319,10 @@ li{
     text-align: center;
 }
 .custom-button {
-    background-color: #A9B9C0; /* Цвет фона */
-    color: #000; /* Цвет текста */
+    background-color: #A9B9C0;
+    color: #000;
     padding: 8px 20px;
-    border-radius: 30px; /* Закругленные углы */
+    border-radius: 30px;
     cursor: pointer;
     text-align: center;
     border: 1px solid #ffffff;
@@ -344,12 +335,11 @@ li{
 }
 
 .custom-button:hover {
-    background-color: #ffffff; /* Цвет при наведении */
+    background-color: #ffffff;
     border: 1px solid #A9B9C0;
 }
 
 .front img {
-    /*width: 100%;*/
     height: auto;
 }
 
@@ -368,7 +358,6 @@ li{
 
 
 .cup-image {
-    /*width: 150px;*/
     height: auto;
 }
 
@@ -392,14 +381,14 @@ li{
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 150px; /* Fixed height for the cup container */
+    height: 150px;
     margin-bottom: 10px;
 }
 
 .cup img {
-    width: 100px; /* Fixed width */
-    height: 150px; /* Fixed height */
-    object-fit: cover; /* Ensures the image fits within the specified dimensions */
+    width: 100px;
+    height: 150px;
+    object-fit: cover;
 }
 
 
@@ -631,7 +620,7 @@ footer{
 }
 
 .tiles-container {
-    display: none; /* Скрыть блок по умолчанию */
+    display: none;
 }
 
 .glassesTiles-container{
@@ -661,7 +650,7 @@ footer{
 }
 
 
-@media (min-width: 769px) and (max-width: 1000px) {
+@media (min-width: 768px) and (max-width: 1000px) {
     .sidebar{
         display: none;
     }
@@ -685,7 +674,7 @@ footer{
         border-radius: 5px;
         font-size: 20px;
         color: #000;
-        cursor: pointer; /* Сделать весь блок кликабельным */
+        cursor: pointer;
         margin-bottom: 34px;
     }
 
@@ -732,52 +721,7 @@ footer{
     }
 }
 
-@media (min-width: 417px) and (max-width: 768px) {
-    .sidebar{
-        display: none;
-    }
-    .custom-container {
-        max-width: 340px;
-        margin: 0 auto;
-    }
-    .buttons-container {
-        display: block;
-    }
-    .one-line, .second-line{
-        display: block;
-        width: 100%;
-    }
-    .pay{
-        width: 100%;
-    }
-    .brand{
-        width: 100%;
-    }
-    .main-content{
-        width: 100%;
-        display: flex;
-        justify-content: center;
-        margin-top: 40px;
-    }
-    .tile{
-        width: 30%;
-    }
-
-    .tile_new-cup{
-        width: 30%;
-    }
-
-    .tile_slider-cup{
-        width: 30%;
-    }
-
-    .tile_hide{
-        width: 30%;
-    }
-
-}
-
-@media (min-width: 1px) and (max-width: 416px) {
+@media (min-width: 1px) and (max-width: 767px) {
     .sidebar{
         display: none;
     }
@@ -845,7 +789,7 @@ footer{
         border-radius: 5px;
         font-size: 20px;
         color: #000;
-        cursor: pointer; /* Сделать весь блок кликабельным */
+        cursor: pointer;
         margin-bottom: 34px;
     }
 
@@ -897,6 +841,7 @@ footer{
 .kastyl1{
     margin-top: 65px;
 }
+
 
 .kastyl3{
     margin-top: 145px;
@@ -1049,10 +994,10 @@ footer{
 .myModal-content {
     margin: auto;
     display: block;
-    height: 100vh; /* Высота изображения равна высоте экрана */
-    max-height: 100vh; /* Максимальная высота изображения — 100% высоты экрана */
-    width: auto; /* Автоматическая ширина для сохранения пропорций */
-    max-width: 100%; /* Максимальная ширина — 100%, чтобы не выходило за рамки экрана */
+    height: 100vh;
+    max-height: 100vh;
+    width: auto;
+    max-width: 100%;
 }
 
 /* Закрывающий крестик */
